Several small fixes (#3409)
* Fix panel background no being completely black.

* Revert the blue color: white on blue contrast is too low.

* Escape wasn't closing the settings panel in Chrome.

* Fix date input crash.

--- a/components/frontend/src/header_footer/Menubar.css
+++ b/components/frontend/src/header_footer/Menubar.css
@@ -14,6 +14,7 @@
 }
 
 .panel {
+    background-color: black;
     border: 0px;
     left: 0px;
     margin: 0px;
